# cqed-scf

./: README.md  SAPT_NOTE.md  package_info.md  pyproject.toml
examples/: Untitled.ipynb
examples/h2_dimer/: h2_dimer_comparison.py  h2_dimer_qed_dft_wb97x.ipynb  h2_dimer_qed_dft_wb97x_KA.ipynb  h2_dimer_qed_sapt0_long_3_to_20.csv  h2_dimer_qed_sapt0_scan.py  h2_dimer_qed_sapt0_short_3_to_10.csv  h2_dimer_wb97x_lz_0.05.py  h2_wb97x-d_lambda_0_regression.py  psi4_fci_ccsd_t_wb97x_d_comparison.ipynb  raw_data_qeddft_fci_H2_dimer.xlsx
examples/he_dimer/: he_dimer_sapt_jk_test.py
examples/molecular_dynamics_freeze_atoms/: .nitrobenzene_frozen_br.py.swp  DFT_nitro.ipynb  DFT_nitro_scan.ipynb  DFT_nitro_scan_qeddft.ipynb  centered_brplus_complex.cjson  h2o_finite_difference_regression.py  md_water_freeze_oxygen.ipynb  nitrobenzene_cqed_rhf.py  nitrobenzene_frozen_br.py  nitrobenzene_wb97x.py  nitrobenzene_wb97x_d.py
examples/optimization/: .text.swp  count.txt  example_ZPE_meta.py  example_ZPE_ortho.py  example_ZPE_para.py  example_freq2.py  gradient_analytic_vs_fd.py  h2o_freq.py  h2o_freq_post_projection.py  h2o_optimization.py  h2o_optimization_projected.py  h2o_projected_grad.py  h2o_psi4_opt.py  output  (+8 more)
tests/: test_cartesian_projection.py  test_df_water_regression.py  test_dse_jk_scaffold.py  test_fd_gradient_qed_dft.py  test_lambda0_pbe_regression.py  test_lambda_zero_regression.py  test_pbe_lambda0_regression.py  test_qed_energy_reference.py  test_qeddft_hilbert_reference.py  test_qedsapt0_driver.py  test_range_separated.py  test_rc_gradient_vs_fd_tight.py
(+286 files in other folders)
